added url change on scrollspy update. fixed bug where couldn't get divs past index 1. colored test divs. :)))

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 			<a id="menu-navigation">MENU</a>
 			<a id="contact-navigation">CONTACT</a>
 		</div>
-		<div class="page-section" id="about" style="height: 500px;">
+		<div class="page-section" id="about" style="height: 350px; background-color: red;">
 		</div>
-		<div class="page-section" id="menu" style="height: 400px;">
+		<div class="page-section" id="menu" style="height: 1000px; background-color: green">
 		</div>
-		<div class="page-section" id="contact" style="height: 300px;">
+		<div class="page-section" id="contact" style="height: 500px; background-color: blue">
 		</div>
 	</body>
 </html>
