did a lot of patching of elementInViewport ( previously withinViewport ). fixed most if not all glitches of scrollspy. made navigationbar stay on screen, even on scroll. added new css for index page. :))))))

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="styles/main-styles.css" />
+		<link rel="stylesheet" href="styles/index-page-styles.css" />
 		<script src="scripts/scrollspy.js"></script>
 	</head>
 	<body>
