redid some css. added some basic text to the section divider. mostly just commiting to save at this point. nothing really special added. :)

--- a/index.html
+++ b/index.html
@@ -10,15 +10,28 @@
 			<p>WEBSITE<span><br />my website</span></p>
 		</div>
 		<div class="main-navigation">
-			<a id="about-navigation">ABOUT</a>
-			<a id="menu-navigation">MENU</a>
-			<a id="contact-navigation">CONTACT</a>
+			<a id="about-navigation" href="#about">ABOUT</a>
+			<a id="menu-navigation" href="#menu">MENU</a>
+			<a id="contact-navigation" href="#contact">CONTACT</a>
 		</div>
-		<div class="page-section" id="about" style="height: 350px; background-color: red;">
+		<div class="page-section" id="about">
+			<p class="section-title">ABOUT</p>
+			<p>
+			Just a little test section with some text. <br />
+			A bit more text here. <br />
+			</p>
 		</div>
-		<div class="page-section" id="menu" style="height: 1000px; background-color: green">
+		<div class="page-section" id="menu">
+			<p class="section-title">MENU</p>
+			<p>
+			Oh shoot more text here.
+			</p>
 		</div>
-		<div class="page-section" id="contact" style="height: 500px; background-color: blue">
+		<div class="page-section" id="contact">
+			<p class="section-title">CONTACT</p>
+			<p>
+			Annnddd more text here.
+			</p>
 		</div>
 	</body>
 </html>
