Working on enquiry appearance. Will need to refactor css and html files.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 			This is a test only.
 			</p>
 			<form class="enquiry-form" method="post" action="/requestservices/enquiry/">
+				<div class="form-title">
+					<p>ENQUIRY SUBMITION FORM</p>
+				</div>
 				<label for="client-name">YOUR NAME</label>
 				<input id="client-name" type="text" name="fullName" placeholder="John Doe" />
 				<label for="client-email">YOUR EMAIL</label>
