Updated name and a few other things for the project.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="styles/index-page-styles.css" />
 		<script src="scripts/scrollspy.js"></script>
 		<script src="scripts/enquiry-script.js"></script>
+		<script src="scripts/menu-loader.js"></script>
 	</head>
 	<body>
 		<div class="jumbotron" id="top-home-page" >
@@ -27,6 +28,8 @@
 			<p>
 			Oh shoot more text here.
 			</p>
+			<div class="menu">
+			</div>
 		</div>
 		<div class="page-section" id="contact">
 			<p class="section-title">CONTACT</p>
