Properly refactored css files. Made some sick transition effects, dude. B)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="styles/main-styles.css" />
-		<link rel="stylesheet" href="styles/index-page-styles.css" />
+		<link rel="stylesheet" href="styles/jumbotron-styles.css" />
+		<link rel="stylesheet" href="styles/main-navigation-styles.css" />
+		<link rel="stylesheet" href="styles/page-section-styles.css" />
+		<link rel="stylesheet" href="styles/menu-styles.css" />
+		<link rel="stylesheet" href="styles/enquiry-styles.css" />
 		<script src="scripts/scroll-spy.js"></script>
 		<script src="scripts/enquiry-script.js"></script>
 		<script src="scripts/menu-loader.js"></script>
@@ -33,9 +37,7 @@
 			<div class="page-section" id="contact">
 				<p class="section-title">CONTACT</p>
 				<form class="enquiry-form" method="POST" action="/requestservices/enquiry/">
-					<div class="form-title">
-						<p>ENQUIRY SUBMITION FORM</p>
-					</div>
+					<p class="form-title">ENQUIRY SUBMITION FORM</p>
 					<label for="client-name">YOUR NAME</label>
 					<input id="client-name" type="text" name="fullName" placeholder="John Doe" />
 					<label for="client-email">YOUR EMAIL</label>
