--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<div class="jumbotron" id="top-home-page">
-			<p>WEBSITE<span><br />my website</span></p>
+			<p>BLACK & ORANGE<span><br />CATERING</span></p>
 		</div>
 		
 		<div class="main-navigation">
@@ -37,14 +37,14 @@
 			<div class="page-section" id="contact">
 				<p class="section-title">CONTACT</p>
 				<form class="enquiry-form" method="POST" action="/requestservices/enquiry/">
-					<p class="form-title">ENQUIRY SUBMITION FORM</p>
+					<p class="form-title">ENQUIRY SUBMISSION FORM</p>
 					<label for="client-name">YOUR NAME</label>
 					<input id="client-name" type="text" name="fullName" placeholder="John Doe" />
 					<label for="client-email">YOUR EMAIL</label>
 					<input id="client-email" type="text" name="emailAddress" placeholder="example.email@gmail.com" />
 					<label for="client-enquiry">YOUR ENQUIRY</label>
 					<textarea id="client-enquiry" type="text" name="enquiryDetails" placeholder="I would like a pizza pls"></textarea>
-					<input type="submit" value="Submit" />
+					<input type="submit" value="SUBMIT" />
 				</form>
 			</div>
 		</div>
