--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 		<link rel="stylesheet" href="styles/jumbotron-styles.css" />
 		<link rel="stylesheet" href="styles/main-navigation-styles.css" />
 		<link rel="stylesheet" href="styles/page-section-styles.css" />
+		<link rel="stylesheet" href="styles/about-styles.css" />
 		<link rel="stylesheet" href="styles/menu-styles.css" />
 		<link rel="stylesheet" href="styles/enquiry-styles.css" />
 		<script src="scripts/scroll-spy.js"></script>
 		<script src="scripts/enquiry-script.js"></script>
 		<script src="scripts/menu-loader.js"></script>
+		<script src="scripts/about-loader.js"></script>
 	</head>
 	<body>
 		<div class="jumbotron" id="top-home-page">
@@ -24,15 +26,9 @@
 		<div class="page-sections">
 			<div class="page-section" id="about">
 				<p class="section-title">ABOUT</p>
-				<p>
-				Just a little test section with some text. <br />
-				A bit more text here. <br />
-				</p>
 			</div>
 			<div class="page-section" id="menu">
 				<p class="section-title">MENU</p>
-				<div class="menu">
-				</div>
 			</div>
 			<div class="page-section" id="contact">
 				<p class="section-title">CONTACT</p>
