Updated how request url is handled. Added full contact retrieval functionality.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 		<link rel="stylesheet" href="styles/about-styles.css" />
 		<link rel="stylesheet" href="styles/menu-styles.css" />
 		<link rel="stylesheet" href="styles/enquiry-styles.css" />
+		<link rel="stylesheet" href="styles/contact-styles.css" />
 		<script src="scripts/scroll-spy.js"></script>
 		<script src="scripts/enquiry-script.js"></script>
 		<script src="scripts/menu-loader.js"></script>
 		<script src="scripts/about-loader.js"></script>
+		<script src="scripts/contact-loader.js"></script>
 	</head>
 	<body>
 		<div class="jumbotron" id="top-home-page">
@@ -32,7 +34,7 @@
 			</div>
 			<div class="page-section" id="contact">
 				<p class="section-title">CONTACT</p>
-				<form class="enquiry-form" method="POST" action="/requestservices/enquiry/">
+				<form class="enquiry-form" method="POST">
 					<p class="form-title">ENQUIRY SUBMISSION FORM</p>
 					<label for="client-name">YOUR NAME</label>
 					<input id="client-name" type="text" name="fullName" placeholder="John Doe" />
