Updated font-size scaling for mobile devices to not scale in crazy fashions and added title DOM to head.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Black & Orange Catering</title>
 		<link rel="stylesheet" href="styles/main-styles.css" />
 		<link rel="stylesheet" href="styles/jumbotron-styles.css" />
 		<link rel="stylesheet" href="styles/main-navigation-styles.css" />
