Added logo and favicon.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Black & Orange Catering</title>
+		<link rel="icon" href="resources/favicon.ico" />
 		<link rel="stylesheet" href="styles/main-styles.css" />
 		<link rel="stylesheet" href="styles/jumbotron-styles.css" />
 		<link rel="stylesheet" href="styles/main-navigation-styles.css" />
@@ -18,7 +19,7 @@
 	</head>
 	<body>
 		<div class="jumbotron" id="top-home-page">
-			<p>BLACK & ORANGE<span><br />CATERING</span></p>
+			<img src="resources/B-O-Logo.png" />
 		</div>
 		
 		<div class="main-navigation">
